import type { ReactNode } from 'react'
import type { RegistrationClass } from '../../../types'
import { LocalizationProvider } from '@mui/x-date-pickers'
import { AdapterDateFns } from '@mui/x-date-pickers/AdapterDateFnsV3'
import { render, screen } from '@testing-library/react'
import { Provider } from 'jotai'
import { SnackbarProvider } from 'notistack'
import { Suspense } from 'react'
import {
  eventWithStaticDates,
  eventWithStaticDatesAnd3Classes,
  eventWithStaticDatesAndClass,
} from '../../../__mockData__/events'
import { registrationWithStaticDates, registrationWithStaticDatesAndClass } from '../../../__mockData__/registrations'
import { locales } from '../../../i18n'
import { merge } from '../../../lib/utils'
import { flushPromises, renderWithUserEvents } from '../../../test-utils/utils'
import { EntryInfo } from './EntryInfo'

function Wrapper(props: { readonly children?: ReactNode }) {
  return (
    <LocalizationProvider dateAdapter={AdapterDateFns} adapterLocale={locales.fi}>
      <Provider>
        <SnackbarProvider>
          <Suspense fallback={<div>loading...</div>}>{props.children}</Suspense>
        </SnackbarProvider>
      </Provider>
    </LocalizationProvider>
  )
}

describe('EntryInfo', () => {
  beforeAll(() => vi.useFakeTimers())
  afterEach(() => vi.runOnlyPendingTimers())
  afterAll(() => {
    vi.clearAllTimers()
    vi.useRealTimers()
  })

  it('should render with event without classes', async () => {
    const { container } = render(
      <EntryInfo reg={registrationWithStaticDates} event={eventWithStaticDates} errorStates={{}} helperTexts={{}} />,
      { wrapper: Wrapper }
    )
    await flushPromises()

    expect(container).toMatchSnapshot()
    expect(screen.queryByRole('combobox', { name: 'registration.class' })).not.toBeInTheDocument()
    expect(screen.getByRole('combobox', { name: 'registration.reserve' })).toBeInTheDocument()
  })

  it('should render with event with classes', async () => {
    const { container } = render(
      <EntryInfo
        reg={registrationWithStaticDatesAndClass}
        event={eventWithStaticDatesAndClass}
        errorStates={{}}
        helperTexts={{}}
      />,
      { wrapper: Wrapper }
    )
    await flushPromises()

    expect(container).toMatchSnapshot()
    expect(screen.getByRole('combobox', { name: 'registration.class' })).toBeInTheDocument()
    expect(screen.getByRole('combobox', { name: 'registration.reserve' })).toBeInTheDocument()
  })

  it('should allow changing class', async () => {
    const reg = merge(registrationWithStaticDatesAndClass, {})
    const changeHandler = vi.fn((props) => Object.assign(reg, props))

    const { user } = renderWithUserEvents(
      <EntryInfo
        reg={reg}
        event={eventWithStaticDatesAnd3Classes}
        errorStates={{}}
        helperTexts={{}}
        onChange={changeHandler}
      />,
      { wrapper: Wrapper },
      { advanceTimers: vi.advanceTimersByTime }
    )

    const classInput = screen.getByRole('combobox', { name: 'registration.class' })
    expect(classInput).toHaveValue('ALO')

    await user.click(classInput)
    await flushPromises()

    const avoOption = screen.getByText('AVO')
    await user.click(avoOption)
    await flushPromises()

    expect(changeHandler).toHaveBeenCalledWith(
      expect.objectContaining({
        class: 'AVO',
      })
    )
  })

  it('should clear class when event does not have classes', async () => {
    const reg = merge(registrationWithStaticDatesAndClass, {})
    const changeHandler = vi.fn()

    render(
      <EntryInfo reg={reg} event={eventWithStaticDates} errorStates={{}} helperTexts={{}} onChange={changeHandler} />,
      {
        wrapper: Wrapper,
      }
    )
    await flushPromises()

    expect(changeHandler).toHaveBeenCalledWith(expect.objectContaining({ class: undefined }))
  })

  it('should allow changing reserve option', async () => {
    const reg = merge(registrationWithStaticDates, {})
    const changeHandler = vi.fn((props) => Object.assign(reg, props))

    const { user } = renderWithUserEvents(
      <EntryInfo reg={reg} event={eventWithStaticDates} errorStates={{}} helperTexts={{}} onChange={changeHandler} />,
      { wrapper: Wrapper },
      { advanceTimers: vi.advanceTimersByTime }
    )

    const reserveInput = screen.getByRole('combobox', { name: 'registration.reserve' })
    expect(reserveInput).toHaveValue('registration.reserveChoises.ANY')

    await user.click(reserveInput)
    await flushPromises()

    const dayOption = screen.getByText('registration.reserveChoises.DAY')
    await user.click(dayOption)
    await flushPromises()

    expect(changeHandler).toHaveBeenCalledWith(
      expect.objectContaining({
        reserve: 'DAY',
      })
    )
  })

  it('should filter dates when multiple dates are available', async () => {
    const reg = merge(registrationWithStaticDates, {})
    const changeHandler = vi.fn((props) => Object.assign(reg, props))

    // ingnore react complaining about components with dublicate id
    vi.spyOn(console, 'error').mockImplementation(() => null)

    const { user } = renderWithUserEvents(
      <EntryInfo reg={reg} event={eventWithStaticDates} errorStates={{}} helperTexts={{}} onChange={changeHandler} />,
      { wrapper: Wrapper },
      { advanceTimers: vi.advanceTimersByTime }
    )

    // Check if date filter is visible
    const dateFilter = screen.getByRole('combobox', { name: 'registration.datesFilter' })
    expect(dateFilter).toBeInTheDocument()

    // Click on the date filter
    await user.click(dateFilter)
    await flushPromises()

    // Select a specific date
    const dateOption = screen.getAllByRole('option')[0]
    await user.click(dateOption)
    await flushPromises()

    // Verify that onChange was called with updated dates
    expect(changeHandler).toHaveBeenCalledWith(
      expect.objectContaining({
        dates: expect.any(Array),
      })
    )
  })

  it('should reset groups when switching from NOME-B to NOWT', async () => {
    const reg = merge(registrationWithStaticDatesAndClass, {})
    const changeHandler = vi.fn((props) => Object.assign(reg, props))
    const nowtEvent = {
      ...eventWithStaticDatesAndClass,
      eventType: 'NOWT',
      id: 'nowt-event',
    }

    const { rerender } = render(
      <EntryInfo
        key={eventWithStaticDatesAndClass.id}
        reg={reg}
        event={eventWithStaticDatesAndClass}
        errorStates={{}}
        helperTexts={{}}
        onChange={changeHandler}
      />,
      { wrapper: Wrapper }
    )
    await flushPromises()
    changeHandler.mockClear()

    rerender(
      <EntryInfo
        key={nowtEvent.id}
        reg={reg}
        event={nowtEvent}
        errorStates={{}}
        helperTexts={{}}
        onChange={changeHandler}
      />
    )
    await flushPromises()

    expect(changeHandler).toHaveBeenCalledTimes(1)
    expect(changeHandler).toHaveBeenNthCalledWith(1, {
      dates: [
        { date: eventWithStaticDatesAndClass.startDate, time: 'kp' },
        { date: eventWithStaticDatesAndClass.endDate, time: 'kp' },
      ],
    })
  })

  it('should update dates to match the new class in a single-group (NOWT) event', async () => {
    const nowtEvent = {
      ...eventWithStaticDatesAnd3Classes,
      eventType: 'NOWT',
      id: 'nowt-event-3-classes',
    }
    const reg = {
      ...registrationWithStaticDatesAndClass,
      class: undefined,
      dates: [],
      eventId: nowtEvent.id,
      eventType: nowtEvent.eventType,
    }
    const changeHandler = vi.fn((props) => Object.assign(reg, props))
    const renderEntryInfo = () => (
      <EntryInfo reg={reg} event={nowtEvent} errorStates={{}} helperTexts={{}} onChange={changeHandler} />
    )

    const { user, rerender } = renderWithUserEvents(
      renderEntryInfo(),
      { wrapper: Wrapper },
      { advanceTimers: vi.advanceTimersByTime }
    )
    await flushPromises()
    rerender(renderEntryInfo())
    await flushPromises()

    expect(reg.class).toBe('ALO')
    expect(reg.dates).toEqual([{ date: nowtEvent.startDate, time: 'kp' }])

    const classInput = screen.getByRole('combobox', { name: 'registration.class' })
    await user.click(classInput)
    await flushPromises()
    await user.click(screen.getByText('VOI'))
    await flushPromises()
    rerender(renderEntryInfo())
    await flushPromises()

    expect(reg.class).toBe('VOI')
    expect(reg.dates).toEqual([{ date: nowtEvent.endDate, time: 'kp' }])
  })

  it('should show error states when provided', async () => {
    render(
      <EntryInfo
        reg={registrationWithStaticDates}
        event={eventWithStaticDates}
        errorStates={{ class: true, dates: true, reserve: true }}
        helperTexts={{ class: 'Class error', dates: 'Dates error', reserve: 'Reserve error' }}
      />,
      { wrapper: Wrapper }
    )
    await flushPromises()

    // Check for error text
    expect(screen.getByText('validation.registration.required field')).toBeInTheDocument()

    // Check for specific error helper texts
    expect(screen.getByText('Reserve error')).toBeInTheDocument()
  })

  it('should handle disabled state', async () => {
    render(
      <EntryInfo
        reg={registrationWithStaticDatesAndClass}
        event={eventWithStaticDatesAndClass}
        errorStates={{}}
        helperTexts={{}}
        disabled={true}
      />,
      { wrapper: Wrapper }
    )
    await flushPromises()

    // Check that inputs are disabled
    const classInput = screen.getByRole('combobox', { name: 'registration.class' })
    expect(classInput).toBeDisabled()

    const reserveInput = screen.getByRole('combobox', { name: 'registration.reserve' })
    expect(reserveInput).toBeDisabled()
  })

  it('should handle class disabled state', async () => {
    render(
      <EntryInfo
        reg={registrationWithStaticDatesAndClass}
        event={eventWithStaticDatesAndClass}
        errorStates={{}}
        helperTexts={{}}
        classDisabled={true}
      />,
      { wrapper: Wrapper }
    )
    await flushPromises()

    // Check that class input is disabled but reserve is not
    const classInput = screen.getByRole('combobox', { name: 'registration.class' })
    expect(classInput).toBeDisabled()

    const reserveInput = screen.getByRole('combobox', { name: 'registration.reserve' })
    expect(reserveInput).not.toBeDisabled()
  })

  it('should handle open/close state', async () => {
    const onOpenChange = vi.fn()
    const { user } = renderWithUserEvents(
      <EntryInfo
        reg={registrationWithStaticDates}
        event={eventWithStaticDates}
        errorStates={{}}
        helperTexts={{}}
        open={false}
        onOpenChange={onOpenChange}
      />,
      { wrapper: Wrapper },
      { advanceTimers: vi.advanceTimersByTime }
    )
    await flushPromises()

    // Find and click the section header to toggle open state
    const sectionHeader = screen.getAllByText('registration.class')[0]
    await user.click(sectionHeader)
    await flushPromises()

    expect(onOpenChange).toHaveBeenCalledWith(true)
  })

  it('should convert empty reserve selection to undefined', async () => {
    // The UI doesn't offer an explicit "empty" option (options are ReserveChoise[]),
    // but the component logic supports mapping '' => undefined. We assert the component
    // accepts reserve: undefined without forcing a value / crashing.
    render(
      <EntryInfo
        reg={{ ...registrationWithStaticDates, reserve: undefined }}
        event={eventWithStaticDates}
        errorStates={{}}
        helperTexts={{}}
      />,
      { wrapper: Wrapper }
    )
    await flushPromises()

    expect(screen.getByRole('combobox', { name: 'registration.reserve' })).toBeInTheDocument()
  })

  it('should override reg.class with className prop (valid RegistrationClass)', async () => {
    const reg = merge(registrationWithStaticDatesAndClass, { class: 'ALO' })
    const changeHandler = vi.fn((props) => Object.assign(reg, props))

    render(
      <EntryInfo
        reg={reg}
        event={eventWithStaticDatesAnd3Classes}
        className="AVO"
        errorStates={{}}
        helperTexts={{}}
        onChange={changeHandler}
      />,
      { wrapper: Wrapper }
    )
    await flushPromises()

    expect(changeHandler).toHaveBeenCalledWith(expect.objectContaining({ class: 'AVO' }))
  })

  it('should clear reg.class when className prop is not a RegistrationClass', async () => {
    const reg = merge(registrationWithStaticDatesAndClass, { class: 'ALO' })
    const changeHandler = vi.fn((props) => Object.assign(reg, props))

    render(
      <EntryInfo
        reg={reg}
        event={eventWithStaticDatesAnd3Classes}
        className="NOT_A_CLASS"
        errorStates={{}}
        helperTexts={{}}
        onChange={changeHandler}
      />,
      { wrapper: Wrapper }
    )
    await flushPromises()

    expect(changeHandler).toHaveBeenCalledWith(expect.objectContaining({ class: undefined }))
  })

  it('should show the entered day on a multi-day event when the class has a single day and group', async () => {
    // KOE-1253: a two-day event where the class runs on one day only, with a single group, left
    // the registrant nothing to pick -- and used to show nothing about the day either.
    const nowtEvent = {
      ...eventWithStaticDatesAnd3Classes,
      eventType: 'NOWT',
      id: 'nowt-single-day-class',
    }
    const reg = {
      ...registrationWithStaticDatesAndClass,
      class: 'VOI' as const,
      dates: [{ date: nowtEvent.endDate, time: 'kp' as const }],
      eventId: nowtEvent.id,
      eventType: nowtEvent.eventType,
    }

    render(<EntryInfo reg={reg} event={nowtEvent} errorStates={{}} helperTexts={{}} />, { wrapper: Wrapper })
    await flushPromises()

    // The day is shown, but there is nothing to filter, so the field is disabled.
    expect(screen.getByRole('combobox', { name: 'registration.datesFilter' })).toBeDisabled()
    expect(screen.getByText('dateFormat.wdshort date')).toBeInTheDocument()
    expect(screen.queryByRole('combobox', { name: 'registration.dates' })).not.toBeInTheDocument()
    expect(
      screen.getByText('VOI, dateFormat.wdshort date registration.timeLong.kp, registration.reserveChoises.ANY')
    ).toBeInTheDocument()
  })

  it('should not show any day on a single day event', async () => {
    const singleDayEvent = {
      ...eventWithStaticDatesAndClass,
      classes: [{ class: 'ALO' as const, date: eventWithStaticDatesAndClass.startDate }],
      endDate: eventWithStaticDatesAndClass.startDate,
      id: 'single-day-event',
    }
    const reg = {
      ...registrationWithStaticDatesAndClass,
      dates: [{ date: singleDayEvent.startDate, time: 'ap' as const }],
      eventId: singleDayEvent.id,
    }

    render(<EntryInfo reg={reg} event={singleDayEvent} errorStates={{}} helperTexts={{}} />, { wrapper: Wrapper })
    await flushPromises()

    expect(screen.queryByRole('combobox', { name: 'registration.datesFilter' })).not.toBeInTheDocument()
    expect(screen.getByText('ALO, registration.reserveChoises.ANY')).toBeInTheDocument()
  })

  it('should pick first available class when current reg.class is not in event classes', async () => {
    // Deliberately not a RegistrationClass: the event's classes must win over a bogus value
    const reg = merge(registrationWithStaticDatesAndClass, { class: 'VAL' as unknown as RegistrationClass })
    const changeHandler = vi.fn((props) => Object.assign(reg, props))

    render(
      <EntryInfo
        reg={reg}
        event={eventWithStaticDatesAnd3Classes}
        errorStates={{}}
        helperTexts={{}}
        onChange={changeHandler}
      />,
      { wrapper: Wrapper }
    )
    await flushPromises()

    // eventWithStaticDatesAnd3Classes has ALO/AVO/VOI in this project mock data
    expect(changeHandler).toHaveBeenCalledWith(
      expect.objectContaining({ class: expect.stringMatching(/^(ALO|AVO|VOI)$/) })
    )
  })
})
